# factor

./: CMakeLists.txt
CMake/: AddSupported.cmake  EveryoneIsDoingIt.cmake  ObtainBootStrapImage.cmake
vm/: CMakeLists.txt  main.cpp
vm/PlatformSpecific/: CMakeLists.txt
